--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,6 +1,9 @@
-/venv
+
+/analysis/__pycache__
+
 /api/__pycache__
 /api/migrations/__pycache__
+
 /config/__pycache__
 
 crawler/crawler/__pycache__
@@ -9,3 +12,5 @@ crawler/crawler/spiders/__pycache__
 /main/__pycache__
 /main/migrations/__pycache__
 /main/management/commands/__pycache__
+
+/venv
